fixed cropping of page by adding overflow-y scroll

--- a/app/assets/stylesheets/album_show.scss
+++ b/app/assets/stylesheets/album_show.scss
@@ -11,6 +11,8 @@
 .album-show-master{
     background-image: linear-gradient(to bottom, #4d1c02, #1c1b1a);
     height: 100vh;
+    overflow-y: scroll;
+
 }
 
 .album-title-show {
