--- a/app/assets/stylesheets/artists.scss
+++ b/app/assets/stylesheets/artists.scss
@@ -5,6 +5,8 @@
 .artist-index-master {
     background-image: linear-gradient(to bottom, #0d483d, #1c1b1a);
     height: 100vh;
+        overflow-y: scroll;
+
 }
 
 .all-artists {
